--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("BG.jpg");
+  /* background-image: url("BG.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -10,7 +10,16 @@ body {
   min-height: 100vh;
   margin: 0;
   
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif; */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 .loader-wrapper{
   width: 100%;
@@ -64,6 +73,19 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+#webcam
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#output_canvas
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #counter, #pose-info, #countdown:not(:empty) , #timeSpent:not(:empty) {
