--- a/src/styles.css
+++ b/src/styles.css
@@ -80,12 +80,14 @@ h2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: scale(-1,1);
 }
 #output_canvas
 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: scale(-1,1);
 }
 
 #counter, #pose-info, #countdown:not(:empty) , #timeSpent:not(:empty) {
