--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,6 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
 }
 .loader-wrapper{
   width: 100%;
@@ -74,7 +69,12 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
 }
-
+#video_container
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 #webcam
 {
   width: 100%;
